@@ -16,11 +16,6 @@ imports: python-env
 	@mkdir -p include
 	@${PYTHON_ENV}/bin/python ${ES_BEATS}/script/generate_imports.py --out monitors/defaults/default.go ${BEAT_PATH}
 
-# Create a new monitor. Requires the parameter MONITOR
-.PHONY: create-monitor
-create-monitor:
-	go run scripts/generate_monitor/main.go -monitor=${MONITOR}
-
 # Collects all module dashboards
 .PHONY: kibana
 kibana:
