@@ -23,6 +23,8 @@ https://github.com/elastic/beats/compare/v6.5.0...6.x[Check the HEAD diff]
 
 *Heartbeat*
 
+- Remove monitor generator script that was rarely used. {pull}9648[9648]
+
 *Journalbeat*
 
 *Metricbeat*
